--- a/cover.css
+++ b/cover.css
@@ -2,45 +2,52 @@
  * Globals
  */
 
-
-/* Custom default button */
-.btn-secondary,
-.btn-secondary:hover,
-.btn-secondary:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritance from `body` */
+ * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
 
 /*
  * Base structure
  */
 
-body {
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-}
-
-.cover-container {
-  max-width: 42em;
-}
-
+/* body {
+} */
 
 /*
  * Header
  */
 
+.banner-wrap {
+  background-image: url(./assets1/WhatsApp\ Image\ 2023-09-19\ at\ 13.59.24_02009578.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: relative;
+  z-index: 1;
+}
+.overlay {
+  z-index: -1;
+  height: 100%;
+  width: 100%;
+  background: black;
+  opacity: 50%;
+  position: absolute;
+  top: 0;
+}
+
 .nav-masthead .nav-link {
-  padding: .25rem 0;
+  padding: 0.25rem 0;
   font-weight: 700;
-  color: rgba(255, 255, 255, .5);
+  color: rgba(255, 255, 255, 0.5);
   background-color: transparent;
-  border-bottom: .25rem solid transparent;
+  border-bottom: 0.25rem solid transparent;
 }
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
+  border-bottom-color: rgba(255, 255, 255, 0.25);
 }
 
 .nav-masthead .nav-link + .nav-link {
@@ -50,4 +57,21 @@ body {
 .nav-masthead .active {
   color: #fff;
   border-bottom-color: #fff;
+}
+.scrolling {
+  background: black;
+  opacity: 90%;
+  transition: all 0.5s;
+}
+
+/* ABOUT ME IMAGE */
+.col-md-5 {
+  width: 200px;
+  height: 250px;
+  overflow: hidden;
+  position: relative;
+}
+.img-me {
+  width: 95%;
+  position: absolute;
 }
